Add web app functionality with flask

--- a/configs/config_pnp.yaml
+++ b/configs/config_pnp.yaml
@@ -1,10 +1,10 @@
 # general
 seed: 1
-device: 'cuda'
+device: 'cpu'
 output_path: 'tokenflow-results'
 
 # data
-data_path: 'data/woman-running'
+data_path: 'data'
 latents_path: 'latents' # should be the same as 'save_dir' arg used in preprocess
 n_inversion_steps: 500 # for retrieving the latents of the inversion
 n_frames: 40
@@ -13,7 +13,7 @@ n_frames: 40
 sd_version: '2.1'
 guidance_scale: 7.5
 n_timesteps: 50
-prompt: "a marble sculpture of a woman running, Venus de Milo"
+prompt: "a marble sculpture of a woman, Venus de Milo"
 negative_prompt: "ugly, blurry, low res, unrealistic, unaesthetic"
 batch_size: 8
 
